<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
    <data/>

    <ScrollView
            android:layout_width="match_parent"
            tools:context=".activity.login.LoginActivity"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent">
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/relativeLayout"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                    <ImageView android:layout_width="20dp"
                               android:layout_height="20dp"
                               app:srcCompat="@drawable/ic_back"
                               android:layout_marginStart="16dp"
                               android:layout_marginTop="30dp"
                               android:id="@+id/backspace"/>
                </RelativeLayout>

                <RelativeLayout
                        android:id="@+id/sign_up_layout"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_width="match_parent"
                        android:layout_below="@id/relativeLayout"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
                        app:layout_constraintEnd_toEndOf="parent">
                    <TextView
                            android:id="@+id/text_subtitle"
                            android:layout_width="match_parent"
                            android:fontFamily="@font/roboto_regular"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:textSize="20sp"
                            android:layout_marginRight="16dp"
                            android:text="@string/fui_sign_in_with_phone_number"
                            android:textColor="@color/accent_black"
                            android:transitionName="titleTransition"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintHorizontal_bias="1.0"
                            android:layout_marginTop="25dp"/>

                    <LinearLayout
                            android:id="@+id/phoneLayout"
                            android:layout_width="match_parent"
                            android:layout_height="90dp"
                            android:orientation="horizontal"
                            android:gravity="top"
                            android:layout_below="@id/text_subtitle"
                            android:transitionName="phoneTransition"
                            tools:layout_editor_absoluteX="0dp" app:layout_constraintTop_toBottomOf="@+id/text_subtitle"
                            android:layout_marginTop="16dp">
                        <LinearLayout
                                android:id="@+id/ccp"
                                android:layout_marginTop="16dp"
                                android:layout_width="wrap_content"
                                android:layout_height="50dp"
                                android:layout_marginStart="16dp"
                                android:orientation="horizontal"
                                app:layout_constraintTop_toBottomOf="@+id/titleSplash"
                                app:layout_constraintStart_toStartOf="parent">
                            <ImageView
                                    android:id="@+id/country_flag"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_vietnam_flag"
                                    android:layout_gravity="center_vertical"/>
                            <TextView
                                    android:id="@+id/country_code"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="8dp"
                                    android:text="+84"
                                    android:layout_gravity="center_vertical"
                                    android:drawableEnd="@drawable/ic_arrow_down"
                                    android:textSize="24sp"/>
                        </LinearLayout>
                        <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/et_phone_number_layout"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_vertical"
                                app:errorEnabled="true"
                                app:boxBackgroundColor="@android:color/transparent"
                                android:background="@android:color/transparent"
                                app:hintEnabled="true"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="16dp"
                                app:layout_constraintStart_toEndOf="@+id/ccp">
                            <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/et_number_send_otp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/phone_number"
                                    android:inputType="phone"
                                    android:textSize="20sp"/>
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <TextView
                            android:id="@+id/tvOtherLoginMethod"
                            android:layout_width="wrap_content" android:layout_height="wrap_content"
                            android:text="@string/message_other_method_login"
                            android:textSize="18sp"
                            android:drawableEnd="@drawable/ic_arrow_right_blue"
                            android:drawablePadding="8dp"
                            android:layout_below="@id/phoneLayout"
                            android:transitionName="socialLoginTransition"
                            android:fontFamily="@font/sfprodisplay_regular"
                            android:textColor="@color/accent_blue"
                            app:layout_constraintTop_toBottomOf="@+id/phoneLayout"
                            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"/>

                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/relativeLayout3">
                <TextView android:layout_width="215dp"
                          android:layout_height="wrap_content"
                          android:text="@string/message_data_charge"
                          android:layout_alignParentBottom="true"
                          android:textSize="14sp"
                          android:layout_marginStart="16dp"
                          android:id="@+id/tv_data_charge"
                          android:layout_marginBottom="70dp"
                          android:fontFamily="@font/sfprodisplay_light"/>
                <ImageView
                        android:id="@+id/btnSendOTP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_proceed"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="16dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginBottom="40dp"/>
                <include
                        layout="@layout/layout_bottom_network_error"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_gravity="bottom"/>
            </RelativeLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/countryCodeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    android:background="#BAFFFFFF">
                <LinearLayout
                        android:id="@+id/country_list"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:orientation="vertical"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:background="@drawable/tv_border">
                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:text="@string/select_country_code"
                              android:gravity="center_horizontal"
                              android:textSize="26sp"
                              android:layout_marginTop="8dp"
                              android:textColor="@color/accent_black"
                              android:fontFamily="@font/sfprodisplay_bold"/>
                    <RelativeLayout
                            android:id="@+id/cc_australia"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp">
                        <ImageView
                                android:id="@+id/aus_flag" android:layout_width="wrap_content" android:layout_height="wrap_content"
                                   android:src="@drawable/ic_australia_flag"/>
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:text="@string/australia"
                                  android:layout_toRightOf="@id/aus_flag"
                                  android:textSize="24sp"
                                  android:textStyle="bold"
                                  android:layout_marginStart="16dp"
                                  android:fontFamily="@font/sfprodisplay_regular"/>
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:text="+61"
                                  android:id="@+id/cc_australia_code"
                                  android:layout_alignParentEnd="true"
                                  android:textSize="20sp"
                                  android:fontFamily="@font/sfprodisplay_light"/>
                    </RelativeLayout>
                    <RelativeLayout
                            android:id="@+id/cc_singapore"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp">
                        <ImageView
                                android:id="@+id/singapore_flag" android:layout_width="wrap_content" android:layout_height="wrap_content"
                                android:src="@drawable/ic_singapore_flag"/>
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:text="@string/singapore"
                                  android:layout_toRightOf="@id/singapore_flag"
                                  android:textSize="24sp"
                                  android:textStyle="bold"
                                  android:layout_marginStart="16dp"
                                  android:fontFamily="@font/sfprodisplay_regular"/>
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:text="+65"
                                  android:id="@+id/cc_singapore_code"
                                  android:layout_alignParentEnd="true"
                                  android:textSize="20sp"
                                  android:fontFamily="@font/sfprodisplay_light"/>
                    </RelativeLayout>
                    <RelativeLayout
                            android:id="@+id/cc_korean"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp">
                        <ImageView
                                android:id="@+id/korean_flag" android:layout_width="wrap_content" android:layout_height="wrap_content"
                                android:src="@drawable/ic_south_korea_flag"/>
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:text="@string/south_korea"
                                  android:layout_toRightOf="@id/korean_flag"
                                  android:textSize="24sp"
                                  android:textStyle="bold"
                                  android:layout_marginStart="16dp"
                                  android:fontFamily="@font/sfprodisplay_regular"/>
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:text="+82"
                                  android:id="@+id/cc_south_korea_code"
                                  android:layout_alignParentEnd="true"
                                  android:textSize="20sp"
                                  android:fontFamily="@font/sfprodisplay_light"/>
                    </RelativeLayout>
                    <RelativeLayout
                            android:id="@+id/cc_vietnam"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp">
                        <ImageView
                                android:id="@+id/vietnam_flag" android:layout_width="wrap_content" android:layout_height="wrap_content"
                                android:src="@drawable/ic_vietnam_flag"/>
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:text="@string/vietnam"
                                  android:layout_toEndOf="@id/vietnam_flag"
                                  android:textSize="24sp"
                                  android:textStyle="bold"
                                  android:layout_marginStart="16dp"
                                  android:fontFamily="@font/sfprodisplay_regular"/>
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:text="+84"
                                  android:id="@+id/cc_vietnam_code"
                                  android:layout_alignParentEnd="true"
                                  android:textSize="20sp"
                                  android:fontFamily="@font/sfprodisplay_light" tools:ignore="HardcodedText"/>
                    </RelativeLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>