<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/splash_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background"
            tools:context=".activities.login.LoginSplashActivity"
            android:orientation="vertical">
        <FrameLayout android:layout_width="150dp" android:layout_height="150dp"
                   android:layout_alignBottom="@id/movingView" android:id="@+id/frameLayout"
                   app:layout_constraintBottom_toTopOf="@+id/movingView"
                   android:background="@color/accent_white"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   android:adjustViewBounds="true">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                       android:src="@drawable/ic_logo_uber"
                       android:layout_gravity="center"/>
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/movingView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/accent_white"
                android:layout_alignParentBottom="true" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:text="@string/message_welcome"
                      android:textColor="@color/accent_black"
                      android:layout_margin="16dp"
                      android:transitionName="titleTransition"
                      android:textSize="30sp" app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                      android:fontFamily="@font/sfprodisplay_regular"
                      android:id="@+id/titleSplash" android:layout_marginTop="16dp"/>

            <LinearLayout
                    android:id="@+id/phoneLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:transitionName="phoneTransition"
                    app:layout_constraintTop_toBottomOf="@id/titleSplash" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintBottom_toTopOf="@+id/tvOtherLoginMethod" android:layout_marginBottom="40dp"
                    android:layout_marginTop="16dp">
                <LinearLayout
                        android:id="@+id/ccp"
                        android:layout_marginTop="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginStart="16dp"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/titleSplash"
                        app:layout_constraintStart_toStartOf="parent">
                    <ImageView
                            android:id="@+id/country_flag"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_vietnam_flag"
                            android:layout_gravity="center_vertical"/>
                    <TextView
                            android:id="@+id/country_code"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="+84"
                            android:layout_gravity="center_vertical"
                            android:drawableEnd="@drawable/ic_arrow_down"
                            android:textSize="24sp"/>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_number_send_otp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/message_enter_phone_number"
                        android:inputType="phone"
                        android:textSize="18sp"
                        android:duplicateParentState="true"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/titleSplash"
                        app:layout_constraintStart_toEndOf="@+id/ccp"
                        android:clickable="false"
                        android:focusable="false"/>
            </LinearLayout>
            <TextView
                    android:id="@+id/tvOtherLoginMethod"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/message_other_method_login"
                    android:textSize="18sp"
                    android:drawablePadding="8dp"
                    android:transitionName="socialLoginTransition"
                    android:fontFamily="@font/sfprodisplay_regular"
                    android:textColor="@color/accent_blue"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="32dp"
                    app:drawableEndCompat="@drawable/ic_arrow_right_blue"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <include
                layout="@layout/layout_bottom_network_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>